Fixed typo in comment

--- a/env.yml
+++ b/env.yml
@@ -48,7 +48,7 @@ dependencies:
   - ninja-base=1.10.2=hd09550d_5
   - numpy-base=1.22.3=py310h9585f30_0
   - openssl=1.1.1q=h7f8727e_0
-  - pip # manually adding pip to avoud warning on Google Colab
+  - pip # manually adding pip to avoid warning on Google Colab
   - packaging=21.3=pyhd3eb1b0_0
   - pcre=8.45=h295c915_0
   - pycparser=2.21=pyhd3eb1b0_0
